logs/twitterbeat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_twitterstream'...
Listing './lib/python3.5/site-packages/feedparser-5.1.2.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2'...
Listing './lib/python3.5/site-packages/oauth2/clients'...
Listing './lib/python3.5/site-packages/oauth2-1.9.0.post1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_twitter-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/twitter.py'...
***   File "./lib/python3.5/site-packages/twitter.py", line 52
    raise ImportError, "Unable to load a json library"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twitterbeat'...
Compiling './lib/python3.5/site-packages/twitterbeat/__init__.py'...
***   File "./lib/python3.5/site-packages/twitterbeat/__init__.py", line 85
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twitterbeat/daemon.py'...
***   File "./lib/python3.5/site-packages/twitterbeat/daemon.py", line 36
    def __init__(self, pidfile, stdin=os.devnull, stdout=os.devnull, stderr=os.devnull, home_dir='.', umask=022, verbose=1):
                                                                                                              ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/twitterbeat/management'...
Listing './lib/python3.5/site-packages/twitterbeat/management/commands'...
Compiling './lib/python3.5/site-packages/twitterbeat/management/commands/twitter_beat.py'...
***   File "./lib/python3.5/site-packages/twitterbeat/management/commands/twitter_beat.py", line 38
    print self.help
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twitterbeat/templatetags'...
Listing './lib/python3.5/site-packages/twitterbeat/tests'...
Compiling './lib/python3.5/site-packages/twitterbeat/tests/thread_test.py'...
***   File "./lib/python3.5/site-packages/twitterbeat/tests/thread_test.py", line 32
    print 'STOOPED \n'
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twitterbeat-0.9.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
